--- a/babylontest.html
+++ b/babylontest.html
@@ -67,10 +67,13 @@
         skyboxMaterial.specularColor = new BABYLON.Color3(0.2, 0.2, 0.2);
         skybox.material = skyboxMaterial;
 
-        BABYLON.SceneLoader.ImportMesh("", "https://raw.githubusercontent.com/ChrisFGCS/AllClean/main/AllClean Blender/", "240 Blackfriar's road (Tex).glb", scene, function(newMeshes){
+        BABYLON.SceneLoader.ImportMesh("", "https://raw.githubusercontent.com/ChrisFGCS/AllClean/main/Blender/", "240 Blackfriar's road (Tex).glb", scene, function(newMeshes){
         //UI
-        });
 
+
+
+
+        });
         return scene;
     };
 
