--- a/babylontest.html
+++ b/babylontest.html
@@ -78,7 +78,7 @@
 
 
     //Model import
-    var buildingMesh = BABYLON.SceneLoader.Append("https://raw.githubusercontent.com/ChrisFGCS/Test/main/Blender/", "240 Blackfriar's road (Tex).glb", scene, function (newMeshes) {
+    var buildingMesh = BABYLON.SceneLoader.Append("https://raw.githubusercontent.com/ChrisFGCS/Test/main/Blender/", "240 Blackfriar's exploded.glb", scene, function (newMeshes) {
       var helper = scene.createDefaultEnvironment({
         createSkybox: false,
         enableGroundMirror: true,
