--- a/SeagerPlace3D.html
+++ b/SeagerPlace3D.html
@@ -78,7 +78,7 @@
 
 
     //Model import
-    var buildingMesh = BABYLON.SceneLoader.Append("https://raw.githubusercontent.com/ChrisFGCS/Test/main/Blender/", "Seager Place (Tex).glb", scene, function (newMeshes) {
+    var buildingMesh = BABYLON.SceneLoader.ImportMesh("", "https://raw.githubusercontent.com/ChrisFGCS/Test/main/Blender/", "Seager Place (Tex).glb", scene, function (newMeshes) {
       var helper = scene.createDefaultEnvironment({
         createSkybox: false,
         enableGroundMirror: true,
