--- a/SeagerPlace3D.html
+++ b/SeagerPlace3D.html
@@ -84,8 +84,16 @@
         enableGroundMirror: true,
         groundYBias: 0.01,
       });
-      let shadow = scene.getMeshByName(`not-runs`)
-      shadow.isPickable = false;
+      let shadow0 = scene.getMeshByName(`not-runs_primitive0`)
+      shadow0.isPickable = false;
+      let shadow1 = scene.getMeshByName(`not-runs_primitive1`)
+      shadow1.isPickable = false;
+      let shadow2 = scene.getMeshByName(`not-runs_primitive2`)
+      shadow2.isPickable = false;
+      let shadow3 = scene.getMeshByName(`not-runs_primitive3`)
+      shadow3.isPickable = false;
+      let shadow4 = scene.getMeshByName(`not-runs_primitive4`)
+      shadow4.isPickable = false;
       let ground = scene.getMeshByName(`BackgroundPlane`)
       ground.isPickable = false;
     });
